@@ -27,6 +27,20 @@ class PaparazziPlugin : Plugin<Project> {
 					)
 				}
 			}
+			jvmArgs(
+				// Hide the huge yellow WARNING:
+				// > An illegal reflective access operation has occurred
+				// > Illegal reflective access by net.twisterrob.sun.test.screenshots.ClearFinalKt
+				// (file:/P:/projects/workspace/net.twisterrob.sun/component/paparazzi/build/libs/paparazzi.jar)
+				// to field java.lang.reflect.Field.modifiers
+				// > Illegal reflective access by LocationPermissionCompatTest
+				// (.../feature/configuration/build/intermediates/javac/debugUnitTest/classes/)
+				// to field java.lang.reflect.Field.modifiers
+				// > Please consider reporting this to the maintainers of net.twisterrob.sun.test.screenshots.ClearFinalKt
+				// > Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+				// > All illegal access operations will be denied in a future release
+				"--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+			)
 		}
 	}
 }
